--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.9"
 dependencies = [
     "asgiref>=3.9.0",
     "fast-query-parsers>=1.0.3",
+    "multidict>=6.6.3",
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
@@ -15,6 +16,7 @@ classifiers = [
     "Operating System :: OS Independent",
     "Intended Audience :: Developers",
     "Topic :: Software Development :: Libraries :: Application Frameworks",
+    "Development Status :: 4 - Beta",
 ]
 
 [project.urls]
