--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
           # Run the linter.
           - id: ruff-check
             types_or: [python, pyi]
-            args: [--fix]
+            args: [--fix, --extend-select, I]
           # Run the formatter.
           - id: ruff-format
             types_or: [python, pyi]
